# deskinfopoint

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  install-service.sh  pyproject.toml
src/deskinfopoint/: __main__.py  alerts.py  app.py  config.py  ha_prefetch.py  mqtt_client.py  persistence.py  settings_defs.py  state.py
src/deskinfopoint/hardware/: buttons.py  display.py  led.py
src/deskinfopoint/screens/: base.py  brightness_screen.py  led_brightness_screen.py  mixed_screen.py  mqtt_screen.py  sensor_screen.py  settings_screen.py
src/deskinfopoint/sensors/: scd30.py
